cluster/apps/ampache/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ampache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ampache
  template:
    metadata:
      labels:
        app: ampache
    spec:
      containers:
        - name: ampache
          image: ampache/ampache:latest
          ports:
            - containerPort: 80
