cluster/apps/ampache/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ampache-service
spec:
  selector:
    app: ampache
  ports:
    - port: 80
      targetPort: 80
